fix blurry text
force hardware acceleration through translate3d, which forces text to align with truncated pixel values rather than fractional

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,11 +1,12 @@
 @mixin fit-page {
 	max-width: $page-width;
-	margin-left: auto;
 	margin-right: auto;
+	margin-left: auto;
+	transform: translate3d(0, 0, 0);
 
 	@include for-size(700px, down) {
-		margin-left: 8px;
 		margin-right: 8px;
+		margin-left: 8px;
 	}
 }
 
